// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined

Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1587
dirigeant . indépendant . revenu professionnel: 51977
dirigeant . rémunération . cotisations: 22919
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41121
dirigeant . rémunération . totale: 72919
entreprise . charges: 0
entreprise . chiffre d'affaires: 72919
impôt . montant: 8879"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20765
dirigeant . rémunération . cotisations: 8283
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19360
dirigeant . rémunération . totale: 28283
entreprise . charges: 0
entreprise . chiffre d'affaires: 28283
impôt . montant: 640"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20765
dirigeant . rémunération . cotisations: 8301
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19360
dirigeant . rémunération . totale: 28301
entreprise . charges: 0
entreprise . chiffre d'affaires: 28301
impôt . montant: 640"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51974
dirigeant . rémunération . cotisations: 22807
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40814
dirigeant . rémunération . totale: 72807
entreprise . charges: 0
entreprise . chiffre d'affaires: 72807
impôt . montant: 9186"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41593
dirigeant . rémunération . cotisations: 18780
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33600
dirigeant . rémunération . totale: 58780
entreprise . charges: 0
entreprise . chiffre d'affaires: 58780
impôt . montant: 6400"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3551
dirigeant . indépendant . revenu professionnel: 31191
dirigeant . rémunération . cotisations: 13973
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 26637
dirigeant . rémunération . totale: 43973
entreprise . charges: 0
entreprise . chiffre d'affaires: 43973
impôt . montant: 3363"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52101
dirigeant . rémunération . cotisations: 27529
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41083
dirigeant . rémunération . totale: 77529
entreprise . charges: 0
entreprise . chiffre d'affaires: 77529
impôt . montant: 8917"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52116
dirigeant . rémunération . cotisations: 28084
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41079
dirigeant . rémunération . totale: 78084
entreprise . charges: 0
entreprise . chiffre d'affaires: 78084
impôt . montant: 8921"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52184
dirigeant . rémunération . cotisations: 30599
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41059
dirigeant . rémunération . totale: 80599
entreprise . charges: 0
entreprise . chiffre d'affaires: 80599
impôt . montant: 8941"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52008
dirigeant . rémunération . cotisations: 24117
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41111
dirigeant . rémunération . totale: 74117
entreprise . charges: 0
entreprise . chiffre d'affaires: 74117
impôt . montant: 8889"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52008
dirigeant . rémunération . cotisations: 24117
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41111
dirigeant . rémunération . totale: 74117
entreprise . charges: 0
entreprise . chiffre d'affaires: 74117
impôt . montant: 8889"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517899
dirigeant . rémunération . cotisations: 159346
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 281585
dirigeant . rémunération . totale: 659346
entreprise . charges: 0
entreprise . chiffre d'affaires: 659346
impôt . montant: 218415"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18144
dirigeant . rémunération . cotisations: 12666
dirigeant . rémunération . net: 17334
dirigeant . rémunération . net . après impôt: 17113
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 221"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18022
dirigeant . rémunération . cotisations: 13866
dirigeant . rémunération . net: 16134
dirigeant . rémunération . net . après impôt: 15932
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 202"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20944
dirigeant . rémunération . cotisations: 9866
dirigeant . rémunération . net: 20134
dirigeant . rémunération . net . après impôt: 19465
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 669"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14196
dirigeant . rémunération . cotisations: 6344
dirigeant . rémunération . net: 13656
dirigeant . rémunération . net . après impôt: 13656
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 227042
dirigeant . rémunération . cotisations: 81101
dirigeant . rémunération . net: 218899
dirigeant . rémunération . net . après impôt: 139586
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 79313"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 223542
dirigeant . rémunération . cotisations: 84601
dirigeant . rémunération . net: 215399
dirigeant . rémunération . net . après impôt: 137661
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 77738"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3359
dirigeant . indépendant . revenu professionnel: 35665
dirigeant . rémunération . cotisations: 15690
dirigeant . rémunération . net: 34310
dirigeant . rémunération . net . après impôt: 30324
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: 3986"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 136
dirigeant . rémunération . cotisations: 1338
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1438
entreprise . charges: 0
entreprise . chiffre d'affaires: 1438
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 156
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 256
entreprise . charges: 0
entreprise . chiffre d'affaires: 256
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 830
dirigeant . rémunération . cotisations: 437
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1237
entreprise . charges: 0
entreprise . chiffre d'affaires: 1237
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41487
dirigeant . rémunération . cotisations: 4732
dirigeant . rémunération . net: 40268
dirigeant . rémunération . net . après impôt: 34536
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 5732"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 7004
dirigeant . rémunération . cotisations: 2237
dirigeant . rémunération . net: 6763
dirigeant . rémunération . net . après impôt: 6763
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 970
dirigeant . indépendant . revenu professionnel: 9255
dirigeant . rémunération . cotisations: 1013
dirigeant . rémunération . net: 8987
dirigeant . rémunération . net . après impôt: 8987
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13358
dirigeant . rémunération . cotisations: 2046
dirigeant . rémunération . net: 12954
dirigeant . rémunération . net . après impôt: 12954
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 39497
dirigeant . rémunération . cotisations: 16993
dirigeant . rémunération . net: 38007
dirigeant . rémunération . net . après impôt: 32872
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 5135"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72127
dirigeant . rémunération . cotisations: 30585
dirigeant . rémunération . net: 69415
dirigeant . rémunération . net . après impôt: 56655
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12760"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72127
dirigeant . rémunération . cotisations: 30585
dirigeant . rémunération . net: 69415
dirigeant . rémunération . net . après impôt: 56655
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12760"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20765
dirigeant . rémunération . cotisations: 8283
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17924
dirigeant . rémunération . totale: 28283
entreprise . charges: 0
entreprise . chiffre d'affaires: 28283
impôt . montant: 2076"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 628
dirigeant . rémunération . cotisations: 1423
dirigeant . rémunération . net: 577
dirigeant . rémunération . net . après impôt: 577
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42552
dirigeant . rémunération . cotisations: 19074
dirigeant . rémunération . net: 40926
dirigeant . rémunération . net . après impôt: 36151
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 4775"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4192
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14192
entreprise . charges: 0
entreprise . chiffre d'affaires: 14192
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4192
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14192
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15192
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42333
dirigeant . rémunération . cotisations: 18961
dirigeant . rémunération . net: 40716
dirigeant . rémunération . net . après impôt: 3000
dirigeant . rémunération . totale: 59677
entreprise . charges: 0
entreprise . chiffre d'affaires: 59676
impôt . montant: 4716"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13954
dirigeant . rémunération . cotisations: 5559
dirigeant . rémunération . net: 13441
dirigeant . rémunération . net . après impôt: 13441
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13210
dirigeant . rémunération . cotisations: 5276
dirigeant . rémunération . net: 12724
dirigeant . rémunération . net . après impôt: 12724
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 549
dirigeant . rémunération . cotisations: 1409
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1909
entreprise . charges: 0
entreprise . chiffre d'affaires: 1909
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1065
dirigeant . rémunération . cotisations: 1500
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2500
entreprise . charges: 0
entreprise . chiffre d'affaires: 2500
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1581
dirigeant . rémunération . cotisations: 1589
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3089
entreprise . charges: 0
entreprise . chiffre d'affaires: 3089
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2097
dirigeant . rémunération . cotisations: 1679
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3679
entreprise . charges: 0
entreprise . chiffre d'affaires: 3679
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5193
dirigeant . rémunération . cotisations: 2217
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7217
entreprise . charges: 0
entreprise . chiffre d'affaires: 7217
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4192
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14192
entreprise . charges: 0
entreprise . chiffre d'affaires: 14192
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103800
dirigeant . rémunération . cotisations: 40052
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73213
dirigeant . rémunération . totale: 140052
entreprise . charges: 0
entreprise . chiffre d'affaires: 140052
impôt . montant: 26787"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033715
dirigeant . rémunération . cotisations: 241751
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 528835
dirigeant . rémunération . totale: 1241751
entreprise . charges: 0
entreprise . chiffre d'affaires: 1241751
impôt . montant: 471165"
`;
